# mini-do

./: .env.dev  .gitignore  README.md  docker-compose-generate-entity.yaml  docker-compose.yaml  generate-entities.sh  postgres.conf  run.sh
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.generate_entity
backend/entity/src/: mod.rs  prelude.rs  task.rs
backend/migration/: Dockerfile
backend/migration/src/: lib.rs  m20230715_000001_create_todo_table.rs  m20231029_165550_add_done_column.rs
backend/src/: main.rs  task.rs
backend/src/entities/: task.rs
frontend/: .dockerignore  Dockerfile  package.json  tailwind.config.js  tsconfig.json
frontend/src/routes/: +page.svelte  Counter.svelte
frontend/src/task/: TaskBrief.svelte  TaskFull.svelte  requests.ts  task.ts
