[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
sea-orm = { version = "0.12.2", features = [
	"sqlx-postgres",
	"runtime-tokio-rustls",
	"macros",
] }
tokio = { version = "1.32.0", features = ["full"] }
