[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" }
color-eyre = "0.6.2"
sea-orm = { version = "0.12.2", features = [
	"sqlx-postgres",
	"runtime-tokio-rustls",
	"macros",
] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
poem-openapi = { version = "3.0.5", features = ["chrono"] }
poem = "1.3.58"
chrono = "0.4.31"
serde_json = "1.0.107"
